modified experience section

--- a/index.html
+++ b/index.html
@@ -252,8 +252,7 @@ real-world projects.</p>
                                 <div class="timeline-content">
                                     <h5 class="timeline-title">Master in Economics<span class="sub">- Ongoing
                                             Class</span></h5>
-                                    <p>Lorem Ipsum Commodo Dolor Sit Amet, Consectetur Adipisicing Elit, Sed Do Eiusmod
-                                        Tempor Incididunt Ut Labore Et Dolore Magna Aliqua. Ut Enim Ad Minim Veniam</p>
+                                    <p>add something about</p>
                                 </div>
                             </li>
                             <li class="timeline-item" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="600">
@@ -291,8 +290,7 @@ real-world projects.</p>
                                 </div>
                                 <div class="timeline-content">
                                     <h5 class="timeline-title">Edure<span class="sub">- Data Analyst Intern</span></h5>
-                                    <p>Lorem Ipsum Commodo Dolor Sit Amet, Consectetur Adipisicing Elit, Sed Do Eiusmod
-                                        Tempor Incididunt Ut Labore Et Dolore Magna Aliqua. Ut Enim Ad Minim Veniam</p>
+                                    <p>Working with senior data analyst by cleaning or preprocessing data, data mining etc</p>
                                 </div>
                             </li>
 
